build: split into common, fabric and neoforge modules