@@ -1,77 +1,29 @@
 plugins {
-	id 'net.fabricmc.fabric-loom' version "${loom_version}"
-	id 'maven-publish'
+	id 'net.fabricmc.fabric-loom' version "${loom_version}" apply false
+	id 'net.neoforged.moddev' version "${moddev_version}" apply false
 }
 
-def minecraftMajor = project.minecraft_version.tokenize('.').take(2).join('.')
-version = "${project.mod_version}+${project.minecraft_version}"
-group = project.maven_group
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'maven-publish'
 
-base {
-	archivesName = "Mapple-${minecraftMajor}"
-}
+	ext.minecraftMajor = rootProject.minecraft_version.tokenize('.').take(2).join('.')
+	version = "${rootProject.mod_version}+${rootProject.minecraft_version}"
+	group = rootProject.maven_group
 
-tasks.withType(AbstractArchiveTask).configureEach {
-	archiveVersion = project.mod_version
-}
+	java {
+		withSourcesJar()
 
-repositories {
-}
-
-dependencies {
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	testImplementation platform("org.junit:junit-bom:5.12.2")
-	testImplementation "org.junit.jupiter:junit-jupiter"
-	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
-	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
-}
-
-loom {
-	accessWidenerPath = file("src/main/resources/mapple.accesswidener")
-
-	runs {
-		server {
-			vmArgs "-Xmx6G", "-Xms6G", "-XX:+UseZGC", "-Xlog:gc*:file=logs/gc.log"
-		}
-	}
-}
-
-test {
-	useJUnitPlatform()
-}
-
-processResources {
-	def version = project.version
-	inputs.property "version", version
-
-	filesMatching("fabric.mod.json") {
-		expand "version": version
-	}
-}
-
-tasks.withType(JavaCompile).configureEach {
-	it.options.release = 25
-}
-
-java {
-	withSourcesJar()
-
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(25)
-	}
-}
-
-publishing {
-	publications {
-		create("mavenJava", MavenPublication) {
-			artifactId = "mapple-${minecraftMajor}"
-			from components.java
+		toolchain {
+			languageVersion = JavaLanguageVersion.of(25)
 		}
 	}
 
-	repositories {
+	tasks.withType(JavaCompile).configureEach {
+		it.options.release = 25
+	}
+
+	tasks.withType(AbstractArchiveTask).configureEach {
+		archiveVersion = rootProject.mod_version
 	}
 }
